--- a/manon/variables/_collapsible.scss
+++ b/manon/variables/_collapsible.scss
@@ -8,7 +8,7 @@ $collapsing-element-align-items: null !default;
 $collapsing-element-gap: null !default;
 $collapsing-element-width: 100% !default;
 $collapsing-element-max-width: 250px !default;
-$collapsing-element-min-width: 250px;
+$collapsing-element-min-width: 250px !default;
 $collapsing-element-z-index: 20 !default;
 $collapsing-element-padding-top: null !default;
 $collapsing-element-padding-right: null !default;
